# 2023.1_G3_Funcional_HaskellatorHeroes

./: README.md
atas/: ata_20_04_23.md  ata_27_04_23.md
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/pages/: projeto.md  team.md
src/: Hero.hi  Hero.hs  HeroInstance.hs  Interface.hs  Main.hi  Main.hs  Tree.hi  Tree.hs  haskellator.cabal  jogo  src.cabal
