cabal-version:      2.4
name:               haskellator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             adrian_s_lps
maintainer:         adriansoareslps@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Tree,
                      Hero,
                      HeroInstance,
                      Interface

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.16.4.0,
                      gloss,
                      JuicyPixels,
                      filepath

    hs-source-dirs:   .
    default-language: Haskell2010
