cabal-version:      3.6
name:               haskellator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             adrian_s_lps
maintainer:         adriansoareslps@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskellator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Tree,
                      Hero,
                      HeroInstance,
                      Interface

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.16.1,
                      gloss ^>= 1.13,
                      filepath ^>= 1.4,
                      containers ^>= 0.6

    hs-source-dirs:   .
    default-language: Haskell2010
